[package]
name = 'rustfst'
version = "1.1.2"
authors = ['Alexandre Caulier<alexandre.caulier@protonmail.com>']
description = 'Library for constructing, combining, optimizing, and searching weighted finite-state transducers (FSTs).'
documentation = 'https://docs.rs/rustfst'
readme = '../README.md'
keywords = [
    'FST',
    'graph',
    'transducer',
    'acceptor',
    'shortest-path',
]
license = 'MIT/Apache-2.0'
repository = 'https://github.com/Garvys/rustfst'
edition = '2018'

[features]
default = ["state-label-u32"]
state-label-u32 = []

[dependencies]

[dev-dependencies]
counter = '0.4'
serde_json = '1.0'
tempfile = '3.0'
path_abs = '0.5'
pretty_assertions = "0.6.1"
proptest = "0.9.4"
doc-comment = "0.3.1"
